--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,18 +16,19 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
-            name: Linux
-            cache-key: linux
-            cmake-args: '-DPICO_EXTRAS_PATH=$GITHUB_WORKSPACE/pico-extras -DPICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk -DPICO_BOARD=pico_w -DCMAKE_INSTALL_PREFIX=`pwd`/install'
-            apt-packages: gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib
+          - name: Cosmic Unicorn
+            board: cosmic
+            cmake-args: '-DDISPLAY_PATH=display/cosmic/cosmic_unicorn.cmake'
+          - name: Galactic Unicorn
+            board: galactic
+            cmake-args: '-DDISPLAY_PATH=display/galactic/galactic_unicorn.cmake'
 
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-20.04
 
     env:
       PICO_SDK_PATH: $GITHUB_WORKSPACE/pico-sdk
       PIMORONI_PICO_LIBS: $GITHUB_WORKSPACE/pimoroni-pico
-      RELEASE_FILE: ${{github.event.repository.name}}-${{github.event.release.tag_name || github.sha}}
+      RELEASE_FILE: ${{matrix.board}}-blunicorn-${{github.event.release.tag_name || github.sha}}
       RELEASE_PATH: $GITHUB_WORKSPACE/install
 
     steps:
@@ -54,9 +55,8 @@ jobs:
 
     # Linux deps
     - name: Install deps
-      if: runner.os == 'Linux'
       run: |
-        sudo apt update && sudo apt install ${{matrix.apt-packages}}
+        sudo apt update && sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
@@ -64,7 +64,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE/project -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCPACK_PACKAGE_FILE_NAME=${{env.RELEASE_FILE}} ${{matrix.cmake-args}}
+      run: cmake $GITHUB_WORKSPACE/project -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCPACK_PACKAGE_FILE_NAME=${{env.RELEASE_FILE}} -DPICO_EXTRAS_PATH=$GITHUB_WORKSPACE/pico-extras -DPICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk -DPICO_BOARD=pico_w -DCMAKE_INSTALL_PREFIX=`pwd`/install ${{matrix.cmake-args}}
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
