--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ pico_sdk_init()
 
 include(bluetooth/bluetooth.cmake)
 include(effect/rainbow_fft.cmake)
+include(effect/classic_fft.cmake)
 
 if(DISPLAY_PATH AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/${DISPLAY_PATH})
 include(${CMAKE_CURRENT_LIST_DIR}/${DISPLAY_PATH})
@@ -37,6 +38,7 @@ target_link_libraries(${NAME}
     pico_audio_i2s
     display
     rainbow_fft
+    classic_fft
 )
 
 message(WARNING "Display: ${DISPLAY_NAME}")
