--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ include(bluetooth/bluetooth.cmake)
 include(effect/rainbow_fft.cmake)
 include(effect/classic_fft.cmake)
 include(effect/cover_art.cmake)
+include(3rd-party/JPEGDEC/JPEGDEC.cmake)
 
 if(DISPLAY_PATH AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/${DISPLAY_PATH})
 include(${CMAKE_CURRENT_LIST_DIR}/${DISPLAY_PATH})
@@ -42,6 +43,7 @@ target_link_libraries(${NAME}
     rainbow_fft
     classic_fft
     cover_art
+    JPEGDEC
 )
 
 message(WARNING "Display: ${DISPLAY_NAME}")
